# PolkaAds

./: .gitignore  CHANGELOG.md  Cargo.toml  PARACHAIN_SETUP.md  README.md  README_PARACHAIN.md  RUNNING.md  zombienet.toml
ai-agent/: README.md  package.json
ai-agent/src/: index.js
node/: Cargo.toml
node/src/: main.rs
pallets/: README.md
pallets/ad-tracking/: Cargo.toml
pallets/ad-tracking/src/: lib.rs
pallets/ads/: Cargo.toml
pallets/ads/src/: lib.rs
pallets/fee-sponsorship/: Cargo.toml
pallets/fee-sponsorship/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs  tests.rs
scripts/: build-omninode.ps1  run-parachain.sh  setup-parachain.md  start-parachain.ps1  start-parachain.sh
snap/: README.md  manifest.json  package.json  tsconfig.json
snap/src/: index.ts  ui.tsx  wallet-integration.ts
web/: FIXES.md  README.md  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/transaction/: page.tsx
web/app/transactions/: page.tsx
web/components/: AdSubmissionForm.tsx  AdsList.tsx  BlockchainStatus.tsx  TransactionModule.tsx  VideoUpload.tsx  WalletConnect.tsx
web/fonts/: README.md
web/lib/: blockchain.ts  ipfs.ts
