[workspace]
members = [
    "pallets/ads",
    "pallets/fee-sponsorship",
    "pallets/ad-tracking",
    "runtime",
    "node",
]
resolver = "2"

[workspace.package]
authors = ["PolkaAds Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/polkaads/polkaads"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

[profile.release]
panic = "unwind"
